# pySAD

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
pysad/: arb_precomiles.py  arb_precompiles.py  decoder.py  errors.py  precompiled.py  signature.py  types.py  utils.py
scripts/: gen_arb_precompiles_from_sol.py  gen_arb_tests.py
scripts/utils/: common.py  db.py  node.py  typer.py
tests/: test_decode.py
tests/abis/: __init__.py  permit2.py  universal_router.py  weth.py
