[tool.poetry]
name = "pysad"
version = "0.1.3"
description = "Python Simple ABI Decoding"
authors = ["Tony Rocco Valentine <tonyroccovalentine@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyevmasm = "^0.2.3"
eth-abi = "^4.0.0"
eth-utils = "^2.1.0"
eth-hash = {extras = ["pycryptodome"], version = "^0.5.1"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
ruff = "^0.0.262"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
